# kyuubiki

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
apps/hub-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/hub-gui/src-tauri/capabilities/: main.json
apps/hub-gui/src-tauri/icons/: README.md  kyuubiki-app.icns
apps/hub-gui/src-tauri/permissions/: hub.toml
apps/hub-gui/src-tauri/src/: hub_commands.rs  hub_desktop_launch.rs  hub_desktop_status.rs  hub_project_bundles.rs  hub_reports_projects.rs  main.rs
apps/installer-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/installer-gui/src-tauri/capabilities/: main.json
apps/installer-gui/src-tauri/icons/: README.md  kyuubiki-app.icns
apps/installer-gui/src-tauri/permissions/: installer.toml
apps/installer-gui/src-tauri/src/: certificates.rs  certificates_openssl.rs  certificates_store.rs  certificates_types.rs  diagnostics.rs  env_panel.rs  main.rs  remote.rs  remote_certificates.rs  remote_exec.rs  remote_nodes.rs  runtime_logs.rs
apps/workbench-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/workbench-gui/src-tauri/capabilities/: main.json
apps/workbench-gui/src-tauri/icons/: README.md
apps/workbench-gui/src-tauri/permissions/: workbench.toml
apps/workbench-gui/src-tauri/src/: main.rs
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: execute_operator_task_batch.py  plan_material_study.py  run_advanced_solvers.py  run_material_envelope.py  run_material_report.py  run_study.py  validate_material_research_bundle.py
sdks/python/kyuubiki_sdk/: __init__.py  advanced_solver_workflows.py  agent_client.py  auth.py  control_plane.py  errors.py  material_reports.py  material_research_bundle.py  material_workflows.py  operator_tasks.py  session.py  solver_fixtures.py  solver_rpc.py  workflow_builders.py  workflow_contracts.py  workflow_results.py
sdks/python/tests/: test_material_reports.py  test_material_research_bundle.py  test_material_workflows.py  test_operator_tasks.py  test_smoke.py  test_solver_fixtures.py  test_workflow_builders.py  test_workflow_contracts.py  test_workflow_results.py
workers/rust/: Cargo.toml  README.md
workers/rust/benchmarks/: 100k-baseline.json  10k-baseline.json  15k-baseline.json  20k-baseline.json  BASELINE-OVERVIEW.md  README.md  catalog.default.json  compound-core-100k-baseline.json  compound-core-10k-baseline.json  compound-core-15k-baseline.json  compound-core-20k-baseline.json  mechanical-core-100k-baseline.json  mechanical-core-10k-baseline.json  mechanical-core-15k-baseline.json  mechanical-core-20k-baseline.json  medium-baseline.json  thermal-10k-baseline.json  thermal-core-100k-baseline.json  thermal-core-10k-baseline.json  thermal-core-15k-baseline.json  thermal-core-20k-baseline.json
workers/rust/benchmarks/reports/: 10k-compare.md  15k-compare.md  20k-compare.md  compound-core-10k-compare.md  mechanical-core-10k-compare.md  medium-compare.md  standard-10k-compare.md  thermal-core-10k-compare.md
workers/rust/crates/: README.md
workers/rust/crates/benchmark/: Cargo.toml
workers/rust/crates/benchmark/src/: catalog.rs  catalog_defaults.rs  catalog_tests.rs  compare.rs  config.rs  generators.rs  generators_extended.rs  generators_structural.rs  generators_thermal_structural.rs  generators_thermal_structural_frames.rs  headless_cases.rs  main.rs  models.rs  runner.rs  (+10 more)
workers/rust/crates/cli/: Cargo.toml
workers/rust/crates/deploy-server/: Cargo.toml
workers/rust/crates/desktop-runtime/: Cargo.toml
workers/rust/crates/engine/: Cargo.toml
workers/rust/crates/headless-sdk/: Cargo.toml
workers/rust/crates/installer/: Cargo.toml
workers/rust/crates/operator-sdk/: Cargo.toml
workers/rust/crates/platform/: Cargo.toml
workers/rust/crates/protocol/: Cargo.toml
workers/rust/crates/script-runner/: Cargo.toml
workers/rust/crates/solver/: Cargo.toml
workers/rust/linux/: README.md
workers/rust/linux/config/: README.md
workers/rust/linux/data/: README.md
workers/rust/linux/desktop/: README.md
workers/rust/linux/exports/: README.md
workers/rust/linux/logs/: README.md
workers/rust/linux/manifests/: README.md
workers/rust/linux/scripts/: README.md
workers/rust/templates/operator-crate-template/: Cargo.toml  README.md  kyuubiki-operator.json
workers/rust/tests/: README.md
(+2773 files in other folders)
