[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kyuubiki-headless-sdk"
version = "0.1.0"
description = "Protocol-driven headless SDK for Kyuubiki"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["kyuubiki_sdk*"]
