[workspace]
members = [
  "crates/benchmark",
  "crates/cli",
  "crates/deploy-server",
  "crates/desktop-runtime",
  "crates/engine",
  "crates/headless-sdk",
  "crates/installer",
  "crates/operator-sdk",
  "crates/platform",
  "crates/protocol",
  "crates/script-runner",
  "crates/solver",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "1.20.0"
