[package]
name = "kyuubiki-hub-gui"
version = "1.4.0"
edition = "2024"
license = "MIT"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kyuubiki-desktop-runtime = { path = "../../../workers/rust/crates/desktop-runtime" }
kyuubiki-installer = { path = "../../../workers/rust/crates/installer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
