[package]
name = "kyuubiki-workbench-gui"
version = "0.1.0"
edition = "2024"
license = "MIT"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
kyuubiki-desktop-runtime = { path = "../../../workers/rust/crates/desktop-runtime" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }
