[package]
name = "kyuubiki-workbench-gui"
version = "2.2.8"
edition = "2024"
license = "MIT"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kyuubiki-desktop-runtime = { path = "../../../workers/rust/crates/desktop-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
