[package]
name = "kyuubiki-benchmark"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kyuubiki-engine = { path = "../engine" }
kyuubiki-headless-sdk = { path = "../headless-sdk" }
kyuubiki-protocol = { path = "../protocol" }
kyuubiki-solver = { path = "../solver" }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
