[package]
name = "kyuubiki-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
kyuubiki-operator-sdk = { path = "../operator-sdk" }
kyuubiki-protocol = { path = "../protocol" }
kyuubiki-solver = { path = "../solver" }
libloading = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
